Modified some minor content - made the reviews different on each page, changed "company updates" to "recent updates", and adjusted the subheader on the front page to be shorter

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
       </section>
 
       <section id="updates" class="more-below">
-      <h2 class="subheading">Company Updates</h2>
+      <h2 class="subheading">Recent Updates</h2>
 
         <div class="grid-container">
           <div class="col-1of3">
@@ -108,6 +108,7 @@
             <p class="updates-date">September 27, 2015</p>
             <p><em>Fit To A Tee</em> will be closing its office from September 29th until October 20th for renovations. You won't be able to come visit us, but you'll still be able to buy your shirts online, so don't worry!</p>
           </div>
+          <a class="button more-info" href="company-updates.html">More Updates</a>
         </div>
       </section>
 
