--- a/current-item-mountain.html
+++ b/current-item-mountain.html
@@ -84,23 +84,23 @@
                 <span class="review-purchase-date">October 14, 2015</span><br/>
                 <span class="review-rating">5 out of 5</span>
               </p>
-              <p>Love it! Been getting compliments from my co-workers all week :)</p>
+              <p>One word: beautiful :D</p>
             </article>
             <article class="more-below">
-              <h3>Wesley Chan</h3>
-              <p>
-                <span class="review-purchase-date">October 12, 2015</span><br/>
-                <span class="review-rating">4 out of 5</span>
-              </p>
-              <p>Loving the shirt quality. Not my favourite design (I really liked the balloon from October) but it's still pretty great!</p>
-            </article>
-            <article>
-              <h3>jimmychu</h3>
+              <h3>DragonCat</h3>
               <p>
                 <span class="review-purchase-date">October 9, 2015</span><br/>
                 <span class="review-rating">3 out of 5</span>
               </p>
-              <p>my first shirt from fit to a tee. looks nice but the small didnt fit me properly. they should have a size guide or something like that</p>
+              <p>Thought it looked better in the online preview, to be honest, but still pretty good</p>
+            </article>
+            <article>
+              <h3>WhyNoNah</h3>
+              <p>
+                <span class="review-purchase-date">October 4, 2015</span><br/>
+                <span class="review-rating">4 out of 5</span>
+              </p>
+              <p>its ok laaah~</p>
             </article>
           </div>
           <div class="col-1of3">
