--- a/discontinued-item-balloon.html
+++ b/discontinued-item-balloon.html
@@ -43,36 +43,44 @@
           <div class="col-2of3 more-below-small">
             <h2>Reviews</h2>
             <article class="more-below">
-              <h3>Kenny</h3>
+              <h3>Jen Lee</h3>
               <p>
-                <span class="review-purchase-date">September 17, 2015</span><br/>
-                <span class="review-rating">3 out of 5</span>
+                <span class="review-purchase-date">September 24, 2015</span><br/>
+                <span class="review-rating">4 out of 5</span>
               </p>
-              <p>The medium doesn't fit great, a bit baggy overall. Would like a more fitted cut.</p>
+              <p>Doesn't fit as well as my boyfriend's, but still nice to match with him :)</p>
             </article>
             <article class="more-below">
-              <h3>Christie Wong</h3>
+              <h3>Andy Drew</h3>
               <p>
-                <span class="review-purchase-date">September 12, 2015</span><br/>
-                <span class="review-rating">1 out of 5</span>
+                <span class="review-purchase-date">September 15, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
               </p>
-              <p>Took almost 3 weeks to arrive, and customer service was terrible. Great shirt, but don't think I'll be doing business with them again.</p>
+              <p>Phenomenal work. I'd give it an A+!</p>
             </article>
             <article class="more-below">
+              <h3>LLow</h3>
+              <p>
+                <span class="review-purchase-date">September 13, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
+              </p>
+              <p>Super comfy! Showed it off to my volleyball teammates and they loved it too!!!</p>
+            </article>
+            <article class="more-below">
+              <h3>Wesley Chan</h3>
+              <p>
+                <span class="review-purchase-date">September 9, 2015</span><br/>
+                <span class="review-rating">5 out of 5</span>
+              </p>
+              <p>Bought one on a recommendation from my buddy Jack. Haven't looked back since.</p>
+            </article>
+            <article>
               <h3>Peter Tang</h3>
               <p>
                 <span class="review-purchase-date">September 3, 2015</span><br/>
                 <span class="review-rating">5 out of 5</span>
               </p>
-              <p>Been buying from Fit To A Tee for over a year, and they still haven't let me down. Another great style!</p>
-            </article>
-            <article>
-              <h3>j.goh</h3>
-              <p>
-                <span class="review-purchase-date">September 2, 2015</span><br/>
-                <span class="review-rating">5 out of 5</span>
-              </p>
-              <p>Awesome! :D</p>
+              <p>What a lovely balloon haha! Looks great :)</p>
             </article>
           </div>
           <div class="col-1of3">
