--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="homepage-content">
       <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-      <p class="subheading">Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
+      <p class="subheading">Beautifully-designed t-shirts from Vancouver, only available for one month.</p>
 
       <a class="button submit" href="about.html">More About Us</a>
     </div>
@@ -115,7 +115,7 @@
       </section>
 
       <section id="updates">
-      <h2 class="subheading">Company Updates</h2>
+      <h2 class="subheading">Recent Updates</h2>
 
         <div class="grid-container">
           <div class="col-1of3">
@@ -134,7 +134,7 @@
             <p><em>Fit To A Tee</em> will be closing its office from September 29th until October 20th for renovations. You won't be able to come visit us, but you'll still be able to buy your shirts online, so don't worry!</p>
           </div>
         </div>
-        <a class="button more-info" href="about.html">More About Us</a>
+        <a class="button more-info" href="company-updates.html">More Updates</a>
       </section> 
 
       <footer>
