--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
     </div>
 
     <!-- Run the scripts only at the end, after loading the page -->
+    <!-- 
+      HTML5shiv allows IE below version 9 to work with HTML5 elements.
+    -->
+    <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/countdown.js"></script>
   </body>
