--- a/style-guide.html
+++ b/style-guide.html
@@ -20,7 +20,8 @@
       <!-- // NAVIGATION -->
       <nav class="fixed-nav-bar">
         <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
-        <ul>
+        <a class="nav-toggle hidden" href="#">MENU</a>
+        <ul class="nav-mobile-hidden">
           <li><a class="button navlink" href="#interactive_elements">Interactive Elements</a></li><li><a class="button navlink" href="#text_elements">Text Elements</a></li><li><a class="button navlink" href="#combined_elements">Combined Elements</a></li><li><a class="button navlink" href="#templates">Templates</a></li>
         </ul>
       </nav>
@@ -604,5 +605,11 @@
       </footer>
 
     </div>
+    <!-- 
+      HTML5shiv allows IE below version 9 to work with HTML5 elements.
+    -->
+    <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.js"></script>
+    <script src="js/mobilemenu.js"></script>
   </body>
 </html>
