Commented on all of the JS and HTML files to make their sections clearer

--- a/about.html
+++ b/about.html
@@ -27,10 +27,13 @@
       </nav>
       <!-- NAVIGATION // -->
 
+      <!-- Basic info about Fit To A Tee -->
       <h1>About Us</h1>
 
       <p class="subheading"><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are <strong>only available for one month</strong>, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
+      <!-- // Basic info -->
 
+      <!-- What We Believe In (Our Values) -->
       <section id="values" class="more-below">
       <h2 class="subheading">What We Believe In</h2>
 
@@ -48,14 +51,17 @@
             <p>Our shirts are designed by professional artists and graphic designers with energy and creativity to spare, who want to share our work. We love making t-shirts and being proud of what we wear.</p>
           </div>
         </div>
-      </section>
 
+      </section>
+      <!-- // What We Believe In -->
+
+      <!-- Meet The Team -->
       <section id="meet-the-team" class="more-below">
       <h2 class="subheading">Meet Our Team</h2>
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/headshot-justin-schurtz.png" alt=" " class="img-team">
+            <img src="img/headshot-justin-schurtz.png" alt="Black and white headshot of Fit To A Tee's founder and CEO, Justin Schurtz." class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Justin Schurtz</h3>
@@ -67,7 +73,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/headshot-shirley-knott.png" alt=" " class="img-team">
+            <img src="img/headshot-shirley-knott.png" alt="Coloured headshot of Fit To A Tee's lead designer, Shirley Knott." class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Shirley Knott</h3>
@@ -79,7 +85,7 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <img src="img/headshot-chris-anthemum.png" alt=" " class="img-team">
+            <img src="img/headshot-chris-anthemum.png" alt="Black and white headshot of Fit To A Tee's prepress lead, Chris Anthemum." class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Chris Anthemum</h3>
@@ -88,8 +94,11 @@
             <p>Chris also plays drums with his band National Anthemum, and enjoys long walks on the beach in the cold Vancouver rain.</p>
           </div>
         </div>
+        
       </section>
+      <!-- // Meet The Team -->
 
+      <!-- Recent Updates -->
       <section id="updates" class="more-below">
       <h2 class="subheading">Recent Updates</h2>
 
@@ -111,16 +120,17 @@
           </div>
           <a class="button more-info" href="company-updates.html">More Updates</a>
         </div>
-      </section>
 
+      </section>
+      <!-- // Recent Updates -->
+
+      <!-- Contact Us -->
       <section id="contact-us">
       <h2 class="subheading">Contact Us</h2>
 
         <div class="grid-container">
           <div class="col-2of3">
-            <div id="map">
-              
-            </div>
+            <div id="map"></div>
           </div>
           <div class="col-1of3">
             <h3>Where We Are</h3>
@@ -149,8 +159,11 @@
             </form>
           </div>
         </div> 
-      </section>
 
+      </section>
+      <!-- // Contact Us -->
+
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -161,6 +174,7 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
 
@@ -173,5 +187,6 @@
     <script src="js/mobilemenu.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/map.js"></script>
+
   </body>
 </html>
