--- a/company-updates.html
+++ b/company-updates.html
@@ -26,9 +26,12 @@
       </nav>
       <!-- NAVIGATION // -->
 
+      <!-- About Company Updates -->
       <h1>Company Updates</h1>
       <p class="subheading">Check out everything that's gone on at <em>Fit To A Tee</em> in the past!</p>
+      <!-- // About Company Updates -->
 
+      <!-- October Updates -->
       <section id="october-updates">
         <h2 class="subheading">October 2015</h2>
         <section>
@@ -42,7 +45,9 @@
           <p>Our September styles have officially ended, and our October styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
         </section>
       </section>
+      <!-- // October Updates -->
 
+      <!-- September Updates -->
       <section id="september-updates">
         <h2 class="subheading">September 2015</h2>
         <section>
@@ -61,7 +66,9 @@
           <p>Our August styles have officially ended, and our September styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
         </section>
       </section> 
+      <!-- // September Updates -->
 
+      <!-- August Updates -->
       <section id="august-updates">
         <h2 class="subheading">August 2015</h2>
         <section>
@@ -75,10 +82,12 @@
           <p>Our July styles have officially ended, and our August styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
         </section>
       </section> 
+      <!-- // August Updates -->
 
       <a class="button more-info" href="company-updates.html">Even More Updates</a>
 
 
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -89,8 +98,10 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
+    
     <!-- Run the scripts only at the end, after loading the page -->
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
@@ -98,5 +109,6 @@
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+
   </body>
 </html>
