--- a/confirm.html
+++ b/confirm.html
@@ -27,8 +27,10 @@
       </nav>
       <!-- NAVIGATION // -->
 
+      <!-- Tell the user what step of the purchasing process they're on -->
       <h1><span class="step-not-selected">Checkout / Review / </span>Confirm</h1>
 
+      <!-- Confirm Order Text -->
       <section id="confirm-order">
       <h2 class="subheading">Thank you!</h2>
       <p class="subheading">We've processed your order. We'll send you an email confirmation once your order ships; your credit card won't be charged until then.</p>
@@ -36,7 +38,9 @@
       
       <a class="button submit" href="current-styles.html">Shop Some More</a>
       </section>
+      <!-- // Confirm Order Text -->
 
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -47,8 +51,10 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
+
     <!-- Run the scripts only at the end, after loading the page -->
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
@@ -56,5 +62,6 @@
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+    
   </body>
 </html>
