--- a/current-item-mountain.html
+++ b/current-item-mountain.html
@@ -28,7 +28,8 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <section id="current-item">
+      <!-- Mountain Shirt Product Screen -->
+      <section id="mountain-shirt">
 
         <div class="product-view more-below">
           <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food." class="img-product-view">
@@ -74,7 +75,9 @@
           </form>
         </div>
       </section>
+      <!-- // Mountain Shirt Product Screen -->
 
+      <!-- Reviews -->
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
@@ -128,6 +131,9 @@
           </div>
         </div> 
       </section>
+      <!-- // Reviews -->
+
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -138,6 +144,7 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
 
@@ -149,5 +156,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
     <script src="js/countdown.js"></script>
+
   </body>
 </html>
