--- a/discontinued-item-balloon.html
+++ b/discontinued-item-balloon.html
@@ -28,17 +28,20 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <section id="current-item">
+      <!-- Balloon Shirt Product Screen -->
+      <section id="balloon-shirt">
 
         <div class="product-view more-below">
-          <img src="img/tshirt-balloon.png" alt="T-shirt with a balloon on the front." class="img-product-view">
+          <img src="img/tshirt-balloon.png" alt="Purple t-shirt with a balloon on the front." class="img-product-view">
           <h1>Balloon T-Shirt</h1>
           <p class="product-date">This style was discontinued on October 1, 2015.</p>
           <p>This balloon t-shirt is made from a 100% bamboo tri-blend, and available in purple, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
           
         </div>
       </section>
+      <!-- // Balloon Shirt Product Screen -->
 
+      <!-- Reviews -->
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
@@ -108,6 +111,9 @@
           </div>
         </div> 
       </section>
+      <!-- // Reviews -->
+
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -118,12 +124,16 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
+
     </div>
+
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
     -->
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+    
   </body>
 </html>
