--- a/discontinued-item-box.html
+++ b/discontinued-item-box.html
@@ -28,6 +28,7 @@
       </nav>
       <!-- NAVIGATION // -->
 
+      <!-- Box Shirt Product Screen -->
       <section id="current-item">
 
         <div class="product-view more-below">
@@ -38,7 +39,9 @@
           
         </div>
       </section>
+      <!-- // Box Shirt Product Screen -->
 
+      <!-- Reviews -->
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
@@ -100,6 +103,9 @@
           </div>
         </div> 
       </section>
+      <!-- // Reviews -->
+
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -110,12 +116,16 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
+
     </div>
+
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
     -->
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+
   </body>
 </html>
