--- a/review.html
+++ b/review.html
@@ -27,27 +27,29 @@
       </nav>
       <!-- NAVIGATION // -->
 
+      <!-- Tell the user what step of the purchasing process they're on -->
       <h1><span class="step-not-selected">Checkout /</span> Review <span class="step-not-selected">/ Confirm</span></h1>
       <p class="subheading">Take one more look at your order. This is your last chance to review your order before confirming it!</p>
 
+      <!-- Review Order -->
       <section id="review-order">
       <h2 class="subheading">Review Order</h2>
       <div class="grid-container more-below">
         <div class="col-1of3 more-below-small">
           <p>
-            <strong>Bike T-Shirt (Red)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
+            <strong>Bike T-Shirt (Blue)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
           </p>
           <p>
-            <strong>Mountain T-Shirt (Blue)</strong> <a class="url" href="current-item-mountain.html">Change</a><br/>
+            <strong>Mountain T-Shirt (Green)</strong> <a class="url" href="current-item-mountain.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
           </p>
           <p>
-            <strong>UFO T-Shirt (Purple)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
+            <strong>Picnic T-Shirt (Yellow)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
@@ -81,7 +83,9 @@
 
       <a class="button submit" href="confirm.html">Confirm Order</a>
       </section>
+      <!-- // Review Order -->
 
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -92,13 +96,16 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
+
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
     -->
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+    
   </body>
 </html>
