--- a/current-item-bike.html
+++ b/current-item-bike.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -29,10 +28,11 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <section id="current-item">
+      <!-- Bike Shirt Product Screen -->
+      <section id="bike-shirt">
 
         <div class="product-view more-below">
-          <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat." class="img-product-view">
+          <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat." class="img-product-view">
           <h1>Bike T-Shirt</h1>
           <div id="countdown">
             <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
@@ -75,7 +75,9 @@
           </form>
         </div>
       </section>
+      <!-- // Bike Shirt Product Screen -->
 
+      <!-- Reviews -->
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
@@ -129,6 +131,9 @@
           </div>
         </div> 
       </section>
+      <!-- // Reviews -->
+
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -139,6 +144,7 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
 
