--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+
     <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
 
       <!-- // NAVIGATION -->
@@ -28,6 +29,7 @@
 
     </div>
 
+    <!-- Header that contains a header image, our tagline, and our key subheading -->
     <div class="homepage-content">
       <h1>Vancouver-designed. One-of-a-kind.</h1>
 
@@ -35,14 +37,18 @@
 
       <a class="button submit" href="about.html">More About Us</a>
     </div>
+    <!-- // Header -->
 
     <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
+
+      <!-- Current Styles Section -->
 
       <section id="current-styles" class="more-below">
 
       <h2 class="subheading">Current Styles</h2>
       <p class="subheading">These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
 
+      <!-- JS Countdown to the end of the style -->
       <div id="countdown">
         <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
       </div>
@@ -50,7 +56,7 @@
         <div class="grid-container">
           <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
-              <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
+              <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
               <figcaption class="product-info">
                 <p class="product-name">Bike T-Shirt</p>
                 <p class="product-price">$29.99</p>
@@ -59,7 +65,7 @@
           </figure>
           <figure class="col-1of3"><a href="current-item-mountain.html">
             <div class="product-listing">
-              <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
+              <img src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
               <figcaption class="product-info">
                 <p class="product-name">Mountain T-Shirt</p>
                 <p class="product-price">$29.99</p>
@@ -68,7 +74,7 @@
           </figure>
           <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
-              <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
+              <img src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Picnic T-Shirt</p>
                 <p class="product-price">$29.99</p>
@@ -78,7 +84,9 @@
         </div>
         <a class="button more-info" href="current-styles.html">More Current Styles</a>
       </section>
+      <!-- // Current Styles Section -->
 
+      <!-- Discontinued Styles Section -->
       <section id="discontinued-styles" class="more-below">
       <h2 class="subheading">Discontinued Styles</h2>
       <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
@@ -86,7 +94,7 @@
         <div class="grid-container">
           <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
-              <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
+              <img src="img/tshirt-box.png" alt="Black t-shirt with a gift box on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Gift Box T-Shirt</p>
                 <p class="product-date">September 2015</p>
@@ -95,7 +103,7 @@
           </figure>
           <figure class="col-1of3"><a href="discontinued-item-balloon.html">
             <div class="product-listing">
-              <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
+              <img src="img/tshirt-balloon.png" alt="Purple t-shirt with a balloon on the front. ">
               <figcaption class="product-info">
                 <p class="product-name">Balloon T-Shirt</p>
                 <p class="product-date">September 2015</p>
@@ -104,7 +112,7 @@
           </figure>
           <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
-              <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
+              <img src="img/tshirt-cake.png" alt="White t-shirt with a cake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cake T-Shirt</p>
                 <p class="product-date">August 2015</p>
@@ -114,7 +122,9 @@
         </div>
         <a class="button more-info" href="discontinued-styles.html">More Discontinued Styles</a>
       </section>
+      <!-- // Discontinued Styles Section -->
 
+      <!-- Recent Updates Section -->
       <section id="updates">
       <h2 class="subheading">Recent Updates</h2>
 
@@ -137,7 +147,9 @@
         </div>
         <a class="button more-info" href="company-updates.html">More Updates</a>
       </section> 
+      <!-- // Recent Updates Section -->
 
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -148,6 +160,7 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
 
@@ -159,5 +172,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/countdown.js"></script>
     <script src="js/mobilemenu.js"></script>
+    
   </body>
 </html>
