--- a/style-guide.html
+++ b/style-guide.html
@@ -591,8 +591,9 @@
 
       </section>
 
-        <!-- TEMPLATES SECTION // -->
+      <!-- TEMPLATES SECTION // -->
 
+      <!-- Footer (w/ contact info and address) -->
       <footer>
         <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
         <div class="vcard">
@@ -603,13 +604,16 @@
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
+      <!-- // Footer -->
 
     </div>
+
     <!-- 
       HTML5shiv allows IE below version 9 to work with HTML5 elements.
     -->
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
+    
   </body>
 </html>
