Added review, countdown, and purchase step indicator templates to the style guide. Cleaned up CSS comments

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             <p>Chris also plays drums with his band National Anthemum, and enjoys long walks on the beach in the cold Vancouver rain.</p>
           </div>
         </div>
-        
+
       </section>
       <!-- // Meet The Team -->
 
@@ -118,9 +118,8 @@
             <p class="updates-date">September 27, 2015</p>
             <p><em>Fit To A Tee</em> will be closing its office from September 29th until October 20th for renovations. You won't be able to come visit us, but you'll still be able to buy your shirts online, so don't worry!</p>
           </div>
-          <a class="button more-info" href="company-updates.html">More Updates</a>
         </div>
-
+        <a class="button more-info" href="company-updates.html">More Updates</a>
       </section>
       <!-- // Recent Updates -->
 
@@ -170,7 +169,7 @@
           <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
           <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
           <p><span class="tel">(604) 271 9202</span><br/>
-          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <span class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
