--- a/confirm.html
+++ b/confirm.html
@@ -47,7 +47,7 @@
           <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
           <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
           <p><span class="tel">(604) 271 9202</span><br/>
-          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <span class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
@@ -62,6 +62,6 @@
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/mobilemenu.js"></script>
-    
+
   </body>
 </html>
