--- a/checkout.html
+++ b/checkout.html
@@ -189,7 +189,7 @@
           <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
           <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
           <p><span class="tel">(604) 271 9202</span><br/>
-          <spanp class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <span class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
           <p>Brendan Lane and Shengting Hu</p>
         </div>
       </footer>
