Added citations. Removed reference to imageSwitch JavaScript which is no longer being used.

--- a/style-guide.html
+++ b/style-guide.html
@@ -25,14 +25,21 @@
           <li><a class="button navlink" href="#interactive_elements">Interactive Elements</a></li><li><a class="button navlink" href="#text_elements">Text Elements</a></li><li><a class="button navlink" href="#combined_elements">Combined Elements</a></li><li><a class="button navlink" href="#templates">Templates</a></li>
         </ul>
       </nav>
-      <!-- NAVIGATION // -->
 
       <h1>Fit to a Tee Style Guide</h1>
-      <p class="author">Brendan Lane</p>
+      <p class="subheading">Welcome to the <em>Fit to a Tee</em> style guide. This guide is a resource for maintaining a consistent design language and coding convention around Fit to a Tee's UI. It's used for storing and maintaining a living database of modular UI elements that make up our site, so that compliancy and consistency can be found across Fit to a Tee's site.</p>
 
-      <p>Welcome to the <em>Fit to a Tee</em> style guide. This guide is a resource for maintaining a consistent design language and coding convention around Fit to a Tee's UI. It's used for storing and maintaining a living database of modular UI elements that make up our site, so that compliancy and consistency can be found across Fit to a Tee's site.</p>
-
-      
+      <!-- Other Pages -->
+      <section id="other_pages">
+        <h2 class="subheading">Other Pages</h2>
+        <section>
+          <ul>
+            <li><span class="listitem"><a href="citations.html">Citations</a></span></li>
+            <li><span class="listitem"><a href="index.html">Site Homepage</a></span></li>
+          </ul>
+        </section>
+      </section>
+      <!-- // Other Pages -->
 
       <!-- // INTERACTIVE ELEMENTS SECTION -->
       <section id="interactive_elements">
