--- a/citations.html
+++ b/citations.html
@@ -99,6 +99,28 @@
       </section>
       <!-- // OTHER ELEMENTS SECTION -->
 
+      <!-- Footer (w/ contact info and address) -->
+      <footer>
+        <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
+        <div class="vcard">
+          <p> <span class="fn"><strong>&copy;2015 Fit To A Tee</strong></span><br/>
+          <span class="adr"><span class="street-address">125 Main Street</span>, <span class="region">Vancouver, BC</span>, <span class="postal-code">V9W 5O8</span></span></p>
+          <p><span class="tel">(604) 271 9202</span><br/>
+          <span class="email"><a href="mailto:info@fittoatee.com">info@fittoatee.com</a></span></p>
+          <p>Brendan Lane and Shengting Hu</p>
+        </div>
+      </footer>
+      <!-- // Footer -->
+
     </div>
+
+    <!-- Run the scripts only at the end, after loading the page -->
+    <!-- 
+      HTML5shiv allows IE below version 9 to work with HTML5 elements.
+    -->
+    <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.js"></script>
+    <script src="js/mobilemenu.js"></script>
+
   </body>
 </html>
