Made the countdown disappear when JS doesn't load. Added footer to the Style Guide.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p class="subheading">These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
 
       <!-- JS Countdown to the end of the style -->
-      <div id="countdown">
+      <div id="countdown" class="hidden">
         <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
       </div>
 
