--- a/current-item-bike.html
+++ b/current-item-bike.html
@@ -34,7 +34,7 @@
         <div class="product-view more-below">
           <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat." class="img-product-view">
           <h1>Bike T-Shirt</h1>
-          <div id="countdown">
+          <div id="countdown" class="hidden">
             <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
           </div>
           <p class="product-date">This style only runs until October 31, 2015!</p>
