--- a/current-item-mountain.html
+++ b/current-item-mountain.html
@@ -34,7 +34,7 @@
         <div class="product-view more-below">
           <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food." class="img-product-view">
           <h1>Mountain T-Shirt</h1>
-          <div id="countdown">
+          <div id="countdown" class="hidden">
             <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
           </div>
           <p class="product-date">This style only runs until October 31, 2015!</p>
