--- a/current-styles.html
+++ b/current-styles.html
@@ -31,7 +31,7 @@
       <h1>Current Styles</h1>
       <p class="subheading">These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
 
-      <div id="countdown">
+      <div id="countdown" class="hidden">
         <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
       </div>
       <!-- // About The Current Styles -->
